# hgj-apps

./: .gitignore  README.md
BCompare_Keygen/: README.md
IME_Indicator/: .gitignore  USAGE.md  config.toml
IME_Indicator/python_indicator/: caret_detector.py  config.py  cursor_detector.py  ime_detector.py  main.py  overlay.py  win32_api.py
IME_Indicator/rust_indicator/src/: caret_detector.rs  cursor_detector.rs  ime_detector.rs  overlay.rs  tray.rs
ccimg/: .gitignore  LICENSE  README.md  build.sh
ccimg/client/: go.mod  main.go
ccimg/daemon/: com.ccimgd.plist  go.mod  main.go  main_unix.go  main_windows.go
ccimg/skill/: paste-image.md
md-preview/: README.md  RETROSPECTIVE.md  index.html  package.json  vite.config.ts
md-preview/.cargo/: config.toml
md-preview/neovim-plugin/: md_preview.lua
md-preview/scripts/: deploy.sh  remove_bcrypt.py
md-preview/server/: md_preview_server.py
md-preview/src/: App.tsx  index.css
md-preview/src-tauri/: Cargo.toml  tauri.conf.json
md-preview/src-tauri/capabilities/: default.json
md-preview/src-tauri/src/: main.rs
